qt6/gen_qspinbox.h

typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QShowEvent QShowEvent;
typedef struct QStyleOptionSpinBox QStyleOptionSpinBox;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWheelEvent QWheelEvent;
bool QDoubleSpinBox_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QDoubleSpinBox_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QDoubleSpinBox_override_virtual_wheelEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QDoubleSpinBox_override_virtual_focusInEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QDoubleSpinBox_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QDoubleSpinBox_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QDoubleSpinBox_override_virtual_changeEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_changeEvent(void* self, QEvent* event);
bool QDoubleSpinBox_override_virtual_closeEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QDoubleSpinBox_override_virtual_hideEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QDoubleSpinBox_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QDoubleSpinBox_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QDoubleSpinBox_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QDoubleSpinBox_override_virtual_timerEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QDoubleSpinBox_override_virtual_paintEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QDoubleSpinBox_override_virtual_showEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_showEvent(void* self, QShowEvent* event);
bool QDoubleSpinBox_override_virtual_initStyleOption(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_initStyleOption(const void* self, QStyleOptionSpinBox* option);
bool QDoubleSpinBox_override_virtual_stepEnabled(void* self, intptr_t slot);
int QDoubleSpinBox_virtualbase_stepEnabled(const void* self);
bool QDoubleSpinBox_override_virtual_devType(void* self, intptr_t slot);
int QDoubleSpinBox_virtualbase_devType(const void* self);
bool QDoubleSpinBox_override_virtual_setVisible(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_setVisible(void* self, bool visible);
bool QDoubleSpinBox_override_virtual_heightForWidth(void* self, intptr_t slot);
int QDoubleSpinBox_virtualbase_heightForWidth(const void* self, int param1);
bool QDoubleSpinBox_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QDoubleSpinBox_virtualbase_hasHeightForWidth(const void* self);
bool QDoubleSpinBox_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QDoubleSpinBox_virtualbase_paintEngine(const void* self);
bool QDoubleSpinBox_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QDoubleSpinBox_override_virtual_enterEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QDoubleSpinBox_override_virtual_leaveEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_leaveEvent(void* self, QEvent* event);
bool QDoubleSpinBox_override_virtual_moveEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QDoubleSpinBox_override_virtual_tabletEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QDoubleSpinBox_override_virtual_actionEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QDoubleSpinBox_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QDoubleSpinBox_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QDoubleSpinBox_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QDoubleSpinBox_override_virtual_dropEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QDoubleSpinBox_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QDoubleSpinBox_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QDoubleSpinBox_override_virtual_metric(void* self, intptr_t slot);
int QDoubleSpinBox_virtualbase_metric(const void* self, int param1);
bool QDoubleSpinBox_override_virtual_initPainter(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_initPainter(const void* self, QPainter* painter);
bool QDoubleSpinBox_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QDoubleSpinBox_virtualbase_redirected(const void* self, QPoint* offset);
bool QDoubleSpinBox_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QDoubleSpinBox_virtualbase_sharedPainter(const void* self);
bool QDoubleSpinBox_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QDoubleSpinBox_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QDoubleSpinBox_virtualbase_focusNextPrevChild(void* self, bool next);
bool QDoubleSpinBox_override_virtual_eventFilter(void* self, intptr_t slot);
bool QDoubleSpinBox_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QDoubleSpinBox_override_virtual_childEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_childEvent(void* self, QChildEvent* event);
bool QDoubleSpinBox_override_virtual_customEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_customEvent(void* self, QEvent* event);
bool QDoubleSpinBox_override_virtual_connectNotify(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_connectNotify(void* self, QMetaMethod* signal);
void QDoubleSpinBox_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);